--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body{
+background-color: black;
+color: white;
+text-align: center;
+}
+#header{
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+ letter-spacing: 10px;
+ background-color: aquamarine;
+  color: black;
+  height: 100px;
+  line-height: 90px;
+  animation: typing 2s,cursor .2s step-end infinite alternate;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#question{
+  margin-top: 15px;
+
+}
+
+.input{
+  margin-top: 10px;
+}
+
+@keyframes cursor {
+  50%{
+      border-color: transparent;
+  }
+}
+
+@keyframes typing {
+  from{width: 0;}
 }
